--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -13,7 +13,7 @@ body {
   color: #ECEFF4;
   display: flex;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   /*transition: color 0.5s, background-color 0.5s;*/
   line-height: 1.6;
